Better Invulnerable Save parse. Add some agents.

--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -413,21 +413,6 @@ Abilities Primarch of the First LegionThe Emperor's ShieldDark Angels BodyguardI
 Primarch of the First Legion All Secrets RevealedMartial Exemplar [Aura]No Hiding From the Watchers [Aura]
 Rules Deep StrikeFights FirstOath of MomentPistolLethal HitsSustained Hits
 Keywords: Character Epic Hero Faction: Adeptus Astartes Faction: Dark Angels Imperium Lion El'Jonson Monster Primarch Warlord`,
-            "Deathwatch:",
-            `Corvus Blackstar
-Unit	M	T	SV	W	LD	OC
-Corvus Blackstar	20+"	10	3+	14	6+	0
-Ranged Weapons	Range	A	BS	S	AP	D	Keywords
-Hurricane bolter	24"	6	3+	4	0	1	Rapid Fire 6, Twin-linked
-Twin assault cannon (x0)	24"	6	3+	6	0	1	Devastating Wounds, Twin-linked
-Twin lascannon	48"	1	3+	12	-3	D6+1	Twin-linked
-Blackstar rocket launcher (x0)	30"	D6+1	3+	5	0	1	Blast
-Stormstrike missile launcher (x2)	48"	1	3+	10	-2	3	-
-Melee Weapons	Range	A	WS	S	AP	D	Keywords
-Armoured hull	Melee	3	4+	6	0	1	-
-Abilities Blackstar Cluster LauncherDamaged: 1-5 Wounds RemainingTransportAuspex Array
-Rules Deadly Demise D6HoverStealthAssigned AgentsRapid FireTwin-linkedIgnores Cover
-Keywords: Aircraft Allied Units Corvus Blackstar Deathwatch Faction: Agents of the Imperium Fly Imperium Ordo Xenos Retinue Transport Vehicle`,
             //"- Grey Knights -",
             //"- Imperial Fists -",
             //"- Iron Hands -",
@@ -514,6 +499,99 @@ Mechadendrite hive	Melee	2D6	3+	4	0	1	Extra Attacks
 Abilities Canticles of the OmnissiahMechanicus BodyguardSelf-repair MechanismsInvulnerable Save 4
 Rules Doctrina ImperativesAnti-Devastating WoundsExtra AttacksBlastMelta
 Keywords: Belisarius Cawl Character Cult Mechanicus Epic Hero Faction: Adeptus Mechanicus Imperium Monster Tech-Priest Warlord`,
+
+            "- Agents of the Imperium -",
+            `Callidus Assassin 
+Unit	M	T	SV	W	LD	OC
+Callidus Assassin	7"	4	6+	4	6+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Neural shredder	12"	D6	N/A	5	-2	1	Anti-INFANTRY 2+, Precision, Torrent
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Phase sword and poison blades	Melee	5	2+	5	-4	2	Lethal Hits, Precision
+Abilities
+Invulnerable Save: 4
+Acrobatic Escape: At the end of the Fight phase, if this model is within Engagement Range of one or more enemy units, it can make a Fall Back move of up to D6". In addition, at the end of your opponent's turn, if this model is not within 3" of one or more enemy units, you can remove it from the battlefield and then, in the Reinforcements step of your next Movement phase, set it up anywhere on the battlefield that is more than 9" horizontally away from all enemy models. If the battle ends and this model is not on the battlefield, it is destroyed.
+Shadow Assignment: This model cannot be selected as your WARLORD. If your army faction is AGENTS OF THE IMPERIUM, then during the Declare Battle Formations step, you can replace this model with a different OFFICIO ASSASSINORUM model, provided that the points value of the new model does not exceed the points value of the model it replaced. Your army cannot include duplicates of the same model (i.e. after replacing this model with this rule, your army cannot have more than 1 VINDICARE ASSASSIN, it cannot have more than 1 CULEXUS ASSASSIN, it cannot have more than 1 EVERSOR ASSASSIN and it cannot have more than 1 CALLIDUS ASSASSIN).
+Lord of Deceit (Aura): Each time your opponent targets a unit from their army with a Stratagem, if that unit is within 12" of this model, increase the cost of that use of that Stratagem by 1CP.
+Rules Deep StrikeLone OperativeFights FirstInfiltratorsAnti-PrecisionTorrentLethal Hits
+Keywords: Callidus Assassin Character Epic Hero Faction: Agents of the Imperium Imperium Infantry`,
+            `Corvus Blackstar
+Unit	M	T	SV	W	LD	OC
+Corvus Blackstar	20+"	10	3+	14	6+	0
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Hurricane bolter	24"	6	3+	4	0	1	Rapid Fire 6, Twin-linked
+Twin assault cannon (x0)	24"	6	3+	6	0	1	Devastating Wounds, Twin-linked
+Twin lascannon	48"	1	3+	12	-3	D6+1	Twin-linked
+Blackstar rocket launcher (x0)	30"	D6+1	3+	5	0	1	Blast
+Stormstrike missile launcher (x2)	48"	1	3+	10	-2	3	-
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured hull	Melee	3	4+	6	0	1	-
+Abilities Blackstar Cluster LauncherDamaged: 1-5 Wounds RemainingTransportAuspex Array
+Rules Deadly Demise D6HoverStealthAssigned AgentsRapid FireTwin-linkedIgnores Cover
+Keywords: Aircraft Allied Units Corvus Blackstar Deathwatch Faction: Agents of the Imperium Fly Imperium Ordo Xenos Retinue Transport Vehicle`,
+            `Culexus Assassin 
+Unit	M	T	SV	W	LD	OC
+Culexus Assassin	7"	4	6+	4	6+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Animus speculum	24"	3	2+	5	-2	D3	Anti-PSYKER 2+, Assault, Precision, Psychic Assassin
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Life-draining touch	Melee	4	2+	4	-2	2	Anti-PSYKER 2+, Devastating Wounds, Precision
+Abilities
+Invulnerable Save: This model has a 4+ invulnerable save.
+Abomination: This model has the Feel No Pain 2+ ability against Psychic Attacks.
+Soulless Horror: Once per battle, at the start of any Command phase, this model can use this ability. If it does, each enemy unit within 9" of this model must take a Battle-shock test, subtracting 1 from that test (or subtracting 2 if that unit is a PSYKER).
+Etheric Emergence: In your Movement phase, when this model is set up on the battlefield using the Deep Strike ability, it can perform an etheric emergence. If it does, this model can be set up anywhere on the battlefield that is more than 6" horizontally away from all enemy units, but until the end of the turn, it is not eligible to declare a charge.
+Shadow Assignment: This model cannot be selected as your WARLORD. If your army faction is AGENTS OF THE IMPERIUM, then during the Declare Battle Formations step, you can replace this model with a different OFFICIO ASSASSINORUM model, provided that the points value of the new model does not exceed the points value of the model it replaced. Your army cannot include duplicates of the same model (i.e. after replacing this model with this rule, your army cannot have more than 1 VINDICARE ASSASSIN, it cannot have more than 1 CULEXUS ASSASSIN, it cannot have more than 1 EVERSOR ASSASSIN and it cannot have more than 1 CALLIDUS ASSASSIN).
+Rules Lone OperativeStealthDeep StrikePsychic AssassinAnti-PrecisionAssaultDevastating Wounds
+Keywords: Character Culexus Assassin Epic Hero Faction: Agents of the Imperium Grenades Imperium Infantry`,
+            `Eversor Assassin 
+Unit	M	T	SV	W	LD	OC
+Eversor Assassin	9"	4	6+	4	6+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Executioner pistol	12"	4	2+	4	0	1	Anti-INFANTRY 3+, Pistol, Precision, Sustained Hits 3
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Power sword and neuro gauntlet	Melee	6	2+	5	-2	2	Anti-INFANTRY 3+, Precision, Sustained Hits 3
+Abilities
+Invulnerable Save: This model has a 4+ invulnerable save.
+Frenzon: This model is eligible to shoot and declare a charge in a turn in which it Advanced.
+Overkill: Once per battle, in your Movement phase, this model can use this ability before it makes a Normal move. If it does, until the end of the turn, add 6" to this model's Movement characteristic and add 3 to the Attacks characteristic of this model's melee weapons.
+Shadow Assignment: This model cannot be selected as your WARLORD. If your army faction is AGENTS OF THE IMPERIUM, then during the Declare Battle Formations step, you can replace this model with a different OFFICIO ASSASSINORUM model, provided that the points value of the new model does not exceed the points value of the model it replaced. Your army cannot include duplicates of the same model (i.e. after replacing this model with this rule, your army cannot have more than 1 VINDICARE ASSASSIN, it cannot have more than 1 CULEXUS ASSASSIN, it cannot have more than 1 EVERSOR ASSASSIN and it cannot have more than 1 CALLIDUS ASSASSIN).
+Rules Lone OperativeDeadly Demise D3Scouts 9"PrecisionPistolSustained HitsAnti-
+Keywords: Character Epic Hero Eversor Assassin Faction: Agents of the Imperium Grenades Imperium Infantry`,
+            `Inquisitor Coteaz 
+Unit	M	T	SV	W	LD	OC
+Inquisitor Coteaz	6"	3	2+	4	6+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Bolt pistol	12"	1	3+	4	0	1	Pistol
+Psychic Blast	18"	D6	3+	3	-1	2	Anti-DAEMON 4+, Anti-INFANTRY 5+, Devastating Wounds, Psychic
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Nemesis daemon hammer	Melee	3	3+	9	-3	3	Psychic
+Abilities
+Invulnerable Save: This model has a 4+ invulnerable save.
+Malefic Wardings (Psychic): While this model is leading a unit, models in that unit have a 6+ Invulnerable Save, and 4+ Invulnerable Save against Psychic Attacks and attacks made by DAEMON models.
+Spy Network: Each time your opponent gains a CP as the result of an ability, roll one D6: on a 2+, you also gain 1CP.
+Leader: This model can be attached to the following units: EXACTION SQUAD, GREY KNIGHTS TERMINATOR SQUAD, IMPERIUM BATTLELINE INFANTRY, IMPERIAL NAVY BREACHERS, INQUISTORIAL AGENTS, SUBDUCTION SQUAD, VIGILANT SQUAD
+Authority of the Inquisition: While this model is leading a unit, it can embark within any TRANSPORT that its Bodyguard unit can embark within.
+Glovodan Psyber-eagle: In your Command phase, you can select one enemy unit within 18" of the bearer. Until the start of your next Command phase, that unit cannot have the Benefit of Cover.
+Rules LeaderPistolPsychicAnti-Devastating Wounds
+Keywords: Character Coteaz Epic Hero Faction: Agents of the Imperium Imperium Infantry Inquisitor Ordo Malleus Psyker Warlord`,
+            `Sisters of Battle Immolator 
+Unit	M	T	SV	W	LD	OC
+Immolator	12"	10	3+	11	7+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Heavy bolter	36"	3	3+	5	-1	2	Sustained Hits 1
+Immolation flamers	18"	2D6	N/A	6	-1	1	Ignores Cover, Torrent
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured tracks	Melee	3	4+	6	0	1	-
+Abilities
+Transport: This model has a transport capacity of 6 ORDO HERETICUS INFANTRY models.
+At the start of the Declare Battle Formations step, you can select one SISTERS OF BATTLE SQUAD from your army. If you do, that unit is Split into two units, each containing as equal a number of models as possible (when splitting a unit in this way, make a note of which models form each of the two new units). One of these units must start the battle embarked within this TRANSPORT; the other can start the battle embarked within another TRANSPORT, or it can be deployed as a separate unit.
+
+Purge and Cleanse: Each time this model has shot, select one enemy unit hit by one or more of those attacks. Until the end of the phase, that enemy unit cannot have the Benefit of Cover.
+Invulnerable Save: This model has a 6+ invulnerable save.
+Rules Deadly Demise D3Sustained HitsTorrentIgnores Cover
+Keywords: Allied Units Dedicated Transport Faction: Agents of the Imperium Imperium Ordo Hereticus Sisters of Battle Immolator Smoke Transport Vehicle`,
+
             "- Astra Militarum -",
             `Ratling Snipers 
 Models
@@ -605,7 +683,8 @@ Damaged: 1-8 Wounds Remaining: While this model has 1-8 wounds remaining, subtra
 Atrapos’ Duty (Bondsman): While a model is affected by this ability, each time that model makes an attack that targets a TITANIC or TOWERING model, you can re-roll the Hit roll and you can re-roll the Wound roll.
 Rules Code ChivalricDeadly Demise D6+2Super-Heavy WalkerBondsman AbilitiesSustained HitsBlastDevastating WoundsHazardous
 Keywords: Cerastus Character Faction: Imperial Knights Imperium Knight Atrapos Titanic Towering Vehicle Walker`,
-            "- Agents of the Imperium -",
+
+
             // Chaos Forces Faction – Includes 6 Armies:
             "=== Chaos ===",
             `Be'lakor
@@ -1277,7 +1356,14 @@ Keywords: Battleline Endless Multitude Faction: Tyranids Great Devourer Infantry
                     // Auspex Array: Ranged weapons equipped by the bearer have the [IGNORES COVER] ability.
                     log("Auspex Array grants IGNORES COVER to ranged weapons.")
                     weapon_keywords.push("IGNORES COVER")
+                } else if (inches < 18 && source_abilities.includes("GLOVODAN PSYBER-EAGLE")) {
+                    log("Glovodan Psyber-eagle ignoring cover < 18\"")
+                    weapon_keywords.push("IGNORES COVER")
+                } else if (source_abilities.includes("PURGE AND CLEANSE")) {
+                    log("PURGE AND CLEANSE ignoring cover")
+                    weapon_keywords.push("IGNORES COVER")
                 }
+
                 if (R <= inches) {
                     log(`${weapon} out of range. ${R} <= ${inches}`)
                     continue
@@ -1442,7 +1528,7 @@ Keywords: Battleline Endless Multitude Faction: Tyranids Great Devourer Infantry
                                     log('Relic of the Matriarch - Simulacrum of the Argent Shroud (Aura) reroll wound 1.')
                                     wound_rerolls = (wound_rerolls + 1) % A
                                 }
-                                
+
                                 if (wound_rerolls > 0 && wound_roll < threshold) {
                                     log(`Rerolling wound ${wound_roll} < ${threshold}`)
                                     wound_roll = d6()
@@ -1540,9 +1626,12 @@ Keywords: Battleline Endless Multitude Faction: Tyranids Great Devourer Infantry
                             }
                             // negation
                             // Feel No Pain x+: Each time this unit would lose a wound, roll one D6: if the result equals or exceeds ‘x’, that wound is not lost. https://wahapedia.ru/wh40k10ed/the-rules/core-rules/#:~:text=attack%20is%20lost.-,FEEL%20NO%20PAIN,-Some%20warriors%20refuse - Not prevented by DEVASTATING WOUNDS even though this is thematically also a save (+++) that can prevent devastation.
+                            let fnp = geti("fnp_save") || 99  // Doesn't stack; choose one.
+                            // Abomination: This model has the Feel No Pain 2+ ability against Psychic Attacks.
+                            if (target_abilities.includes("ABOMINATION") && weapon_keywords.includes("PSYCHIC") && fnp > 2) fnp = 2
                             for (let d = 0; d < D; ++d) {
-                                if (d6() >= geti("fnp_save")) {
-                                    log("Saved 1 mortal wound by Feel No Pain (+++).")
+                                if (d6() >= fnp) {
+                                    log(`Saved 1 mortal wound by Feel No Pain ${fnp}+++`)
                                     D -= 1  // This is a negate; not a modifier which can't normally go below 1 according to "Rules Commentary": https://www.reddit.com/r/Warhammer40k/comments/1eibdkb/comment/lg5nmn5/
                                 }
                             }
@@ -1759,6 +1848,8 @@ Melee
                     if (mo) {
                         ability = mo[1]
                         val = parseInt(mo[2])
+                        let inv_mo = /^This model has a (\d)\+ invulnerable save.$/.exec(mo[2].trim())
+                        if (inv_mo) val = parseInt(inv_mo[1])
                         if (val) ability += ' ' + val
                         //log(`Line '''${line}''' has ${mode}: '''${ability}'''`)
                         squad[mode.toLowerCase()].push(ability)
