Fix Lone Operative. Improve Invulnerable Save parsing.

--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -499,6 +499,111 @@ Mechadendrite hive	Melee	2D6	3+	4	0	1	Extra Attacks
 Abilities Canticles of the OmnissiahMechanicus BodyguardSelf-repair MechanismsInvulnerable Save 4
 Rules Doctrina ImperativesAnti-Devastating WoundsExtra AttacksBlastMelta
 Keywords: Belisarius Cawl Character Cult Mechanicus Epic Hero Faction: Adeptus Mechanicus Imperium Monster Tech-Priest Warlord`,
+            `Cybernetica Datasmith 
+Unit	M	T	SV	W	LD	OC
+Cybernetica Datasmith	6"	4	2+	3	7+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Mechanicus pistol	12"	1	3+	6	-1	1	Devastating Wounds, Pistol
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Power fist	Melee	2	2+	8	-2	2	-
+Abilities
+Leader: This model must be attached to the following unit:
+■ Kastelan Robots
+You must attach this model to a Kastelan Robots unit, even if one or more other Cybernetica Datasmith models havealready been attached to it. In such cases, if that bodyguard unit is destroyed, the Leader units attached to it become separate units with their original Starting Strengths. If you cannot attach this model to a Kastelan Robots unit, this model cannot be deployed and counts as having been destroyed during the first battle round. While attached to a Kastelan Robots unit, this model loses the INFANTRY keyword.
+
+Battle Protocols: At the start of the battle, if this model is leading a Kastelan Robots unit, that unit enters Aegis Protocols (see below). In your Command phase, if this model is leading a Kastelan Robots unit, you can select one protocol from those listed below for that unit to enter. Once a unit enters a protocol, it remains in that protocol until it enters a different one
+■ Protector Protocol: Add 2 to the Attacks characteristic of ranged weapons equipped by Kastelan Robot models in that unit.
+■ Conqueror Protocol: Add 2 to the Attacks characteristic of melee weapons equipped by Kastelan Robot models in that unit.
+■ Aegis Protocol: Add 1 to the Toughness characteristic of Kastelan Robot models in that unit.
+Invulnerable Save: 5+
+Arch Negator: Ranged weapons equipped by the bearer have the [ANTI-VEHICLE 4+] ability.`,
+            `Kastelan Robots 
+Models
+ 1x Kastelan Robot: Kastelan phosphor blaster & Kastelan fist (Kastelan fist, Kastelan phosphor blaster), Heavy phosphor blaster
+ 1x Kastelan Robot: Twin Kastelan fist, Incendine combustor
+ 2x Kastelan Robot: Twin Kastelan phosphor blaster and CCW (Close combat weapon, Twin Kastelan phosphor blaster), Heavy phosphor blaster
+Unit	M	T	SV	W	LD	OC
+Kastelan Robot	6"	9	2+	7	7+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Kastelan phosphor blaster	24"	3	4+	6	-1	1	Ignores Cover
+Heavy phosphor blaster (x3)	36"	3	4+	6	-1	2	Ignores Cover
+Incendine combustor	12"	D6	N/A	6	-1	1	Ignores Cover, Torrent
+Twin Kastelan phosphor blaster (x2)	24"	3	4+	6	-1	1	Ignores Cover, Twin-linked
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Kastelan fist	Melee	4	4+	12	-2	3	-
+Twin Kastelan fist	Melee	4	4+	12	-2	3	Twin-linked
+Close combat weapon (x2)	Melee	3	4+	6	0	1	-
+Abilities
+Robotic Bodyguard: While a Cybernetica Datasmith model is leading this unit, that model has the Feel No Pain 4+ ability.
+Repulsor Grid: Each time a ranged attack is allocated to a Kastelan Robot model in this unit, on an unmodified saving throw of 6, the attacking unit suffers 1 mortal wound after it has finished making its attacks.
+Invulnerable Save: 5+
+Rules Deadly Demise 1Ignores CoverTwin-linkedTorrent
+Keywords: Faction: Adeptus Mechanicus Imperium Kastelan Robots Legio Cybernetica Vehicle Walker`,
+            `Skitarii Rangers 
+Models
+ 1x Skitarii Ranger Alpha: Alpha combat weapon, Close combat weapon, Galvanic rifle
+ 1x Skitarii Ranger w/ arc rifle: Arc rifle, Close combat weapon
+ 5x Skitarii Ranger w/ galvanic rifle: Close combat weapon, Galvanic rifle
+ 1x Skitarii Ranger w/ omnispex: Close combat weapon, Galvanic rifle, Omnispex
+ 1x Skitarii Ranger w/ plasma caliver: Close combat weapon, Plasma caliver
+ 1x Skitarii Ranger w/ transuranic arquebus: Close combat weapon, Transuranic arquebus
+Unit	M	T	SV	W	LD	OC
+Skitarii Rangers	6"	3	4+	1	7+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Galvanic rifle (x7)	30"	2	4+	4	0	1	-
+Mechanicus pistol (x0)	12"	1	4+	6	-1	1	Devastating Wounds, Pistol
+Arc rifle	30"	1	4+	8	-1	D3	Anti-Vehicle 4+, Devastating Wounds, Rapid Fire 1
+➤ Plasma caliver - supercharge	30"	2	4+	8	-3	2	Hazardous
+➤ Plasma caliver - standard (x0)	30"	2	4+	7	-2	1	-
+Transuranic arquebus	36"	1	4+	7	-2	D3	Heavy, Precision
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Alpha combat weapon	Melee	2	4+	5	-1	1	-
+Close combat weapon (x10)	Melee	1	4+	3	0	1	-
+Abilities
+Objective Scouted: At the end of your Command phase, if this unit is within range of an objective marker you control, that objective marker remains under your control, even if you have no models within range of it, until your opponent controls it at the start or end of any turn.
+Invulnerable Save: 5+
+Omnispex: Ranged weapons equipped by models in the bearer’s unit have the IGNORES COVER ability.
+Rules Scouts 6"Doctrina ImperativesRapid FireAnti-Devastating WoundsHazardousHeavyPrecision
+Keywords: Battleline Faction: Adeptus Mechanicus Imperium Infantry Rangers Skitarii`,
+            `Skitarii Vanguard 
+Models
+ 1x Skitarii Vanguard Alpha: Alpha combat weapon, Close combat weapon, Mechanicus pistol
+ 1x Skitarii Vanguard w/ arc rifle: Arc rifle, Close combat weapon
+ 1x Skitarii Vanguard w/ omnispex: Close combat weapon, Omnispex, Radium carbine
+ 1x Skitarii Vanguard w/ plasma caliver: Close combat weapon, Plasma caliver
+ 5x Skitarii Vanguard w/ radium carbine: Close combat weapon, Radium carbine
+ 1x Skitarii Vanguard w/ transuranic arquebus: Close combat weapon, Transuranic arquebus
+Unit	M	T	SV	W	LD	OC
+Skitarii Vanguard	6"	3	4+	1	7+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Mechanicus pistol	12"	1	4+	6	-1	1	Devastating Wounds, Pistol
+Radium carbine (x6)	18"	3	4+	3	0	1	Anti-Infantry 4+
+Arc rifle	30"	1	4+	8	-1	D3	Anti-Vehicle 4+, Devastating Wounds, Rapid Fire 1
+➤ Plasma caliver - supercharge	30"	2	4+	8	-3	2	Hazardous
+➤ Plasma caliver - standard (x0)	30"	2	4+	7	-2	1	-
+Transuranic arquebus	36"	1	4+	7	-2	D3	Heavy, Precision
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Alpha combat weapon	Melee	2	4+	5	-1	1	-
+Close combat weapon (x10)	Melee	1	4+	3	0	1	-
+Abilities
+Rad-saturation (Aura): While an enemy unit (excluding Vehicle units) is within 3" of this unit, subtract 1 from the Objective Control characteristic of models in that unit.
+Invulnerable Save: 5+
+Omnispex: Ranged weapons equipped by models in the bearer’s unit have the IGNORES COVER ability.
+Rules Doctrina ImperativesAnti-Rapid FireDevastating WoundsHazardousHeavyPrecision
+Keywords: Battleline Faction: Adeptus Mechanicus Imperium Infantry Skitarii Vanguard`,
+            `Skorpius Dunerider 
+Unit	M	T	SV	W	LD	OC
+Skorpius Dunerider	12"	9	3+	11	7+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Cognis heavy stubber array	36"	9	4+	4	0	1	Rapid Fire 9, Sustained Hits 1, Twin-linked
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured hull	Melee	3	4+	6	0	1	-
+Abilities
+Broad spectrum data-tether: Each time you select the bearer as the target of a Stratagem, roll one D6: on a 5+, you gain 1CP.
+Fire Support: In your Shooting phase, after this model has shot, select one enemy unit it scored one or more hits against this phase. Until the end of the phase, each time a friendly model that disembarked from this Transport this turn makes an attack that targets that enemy unit, you can re-roll the Wound roll.
+Transport Skorpius Dunerider
+Rules Deadly Demise D3Doctrina ImperativesFiring Deck 2Rapid FireSustained HitsTwin-linked
+Keywords: Dedicated Transport Faction: Adeptus Mechanicus Imperium Skitarii Skorpius Dunerider Smoke Transport Vehicle`,
 
             "- Agents of the Imperium -",
             `Callidus Assassin 
@@ -1139,6 +1244,43 @@ Rules Feel No Pain 6+Waaagh!LeaderPistolAnti-
 Keywords: Character Epic Hero Faction: Orks Infantry Zodgrod Wortsnagga`,
 
             "- Tyranids -",
+            `Deathleaper 
+Unit	M	T	SV	W	LD	OC
+Deathleaper	8"	6	3+	7	7+	1
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Lictor Claws and Talons	Melee	6	2+	7	-2	2	Precision
+Abilities
+Fear of the Unseen (Aura): While an enemy unit is within 6" of this model, worsen the Leadership characteristic of models in that unit by 1. In addition, in the Battle-shock step of your opponent’s Command phase, if such an enemy unit is below its Starting Strength, it must take a Battle-shock test.
+Hunter Organism: This model cannot be your Warlord
+Feeder Tendrils: Each time this model destroys an enemy Character model, you gain 1CP.
+Invulnerable Save (4+): This model has a 4+ Invulnerable Save.
+Rules
+Fights First: Units with this ability that are eligible to fight do so in the Fights First step, provided every model in the unit has this ability.
+Infiltrators: During deployment, if every model in a unit has this ability, then when you set it up, it can be set up anywhere on the battlefield that is more than 9" horizontally away from the enemy deployment zone and all enemy models.
+Lone Operative: Unless part of an Attached Unit, this unit can only be selected as the target of a ranged attack if the attacking model is within 12".
+Stealth: If every model in a unit has this ability, then each time a ranged attack is made against it, subtract 1 from that attack’s Hit roll.
+Synapse: If your Army Faction is TYRANIDS, while a TYRANIDS unit from your army is within 6" of one or more friendly SYNAPSE models, that TYRANIDS unit is said to be within Synapse Range of that model and of your army. While a Tyranids unit from your army is within Synapse Range of your army:
+■ Each time that unit takes a Battle-shock test, take that test on 3D6 instead of 2D6.
+■ Each time a model in that unit makes a melee attack, add 1 to the Strength characteristic of that attack.
+
+Precision: Weapons with [PRECISION] in their profile are known as Precision weapons. Each time an attack made with such a weapon successfully wounds an Attached Unit, if a Character model in that unit is visible to the attacking model, the attacking model’s player can choose to have that attack allocated to that Character model instead of following the normal attack sequence.
+Keywords: Character Deathleaper Epic Hero Faction: Tyranids Great Devourer Infantry Vanguard Invader`,
+            `Old One Eye 
+Unit	M	T	SV	W	LD	OC
+Old One Eye	8"	9	2+	9	8+	3
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+➤ Old One Eye’s claws and talons - Strike	Melee	6	3+	14	-3	D6+1	-
+➤ Old One Eye’s claws and talons - Sweep (x0)	Melee	12	3+	6	-1	1	-
+Abilities
+Alpha Leader: While this model is leading a unit, each time a model in that unit makes an attack, you can re-roll the Hit roll.
+Unstoppable Monster: At the start of each player’s Command phase, this model regains up to D3 lost wounds.
+Rules Feel No Pain 5+SynapseLeader
+Abilities (Leader)	Description
+Leader	This model can be attached to the following unit:
+
+CARNIFEXES
+
+Keywords: Character Epic Hero Faction: Tyranids Great Devourer Monster Old One Eye Warlord`,
             `Termagants 
 Models
  1x Termagant w/ Shardlauncher: Chitinous Claws and Teeth, Shardlauncher
@@ -1160,7 +1302,7 @@ Abilities Skulking Horrors
 Rules SynapseHeavyBlastAssaultDevastating WoundsTorrent
 Keywords: Battleline Endless Multitude Faction: Tyranids Great Devourer Infantry Termagants`,
 
-            "- Pasted -",
+            "=== NewRecruit.eu paste ===",
         ]
 
         function import_sheets() {
@@ -1352,14 +1494,21 @@ Keywords: Battleline Endless Multitude Faction: Tyranids Great Devourer Infantry
                     // if (target_keywords.includes("FIGHTS FIRST")) {
                     // TODO: Weapon inputs for target and bidirectional combat simulation.
                     // }
-                } else if (source_abilities.includes("AUSPEX ARRAY")) {
-                    // Auspex Array: Ranged weapons equipped by the bearer have the [IGNORES COVER] ability.
-                    log("Auspex Array grants IGNORES COVER to ranged weapons.")
-                    weapon_keywords.push("IGNORES COVER")
-                } else if (inches < 18 && source_abilities.includes("GLOVODAN PSYBER-EAGLE")) {
+                } else {  // Ranged weapon.
+                    if (source_abilities.includes("ARCH NEGATOR")) {
+                        log("Arch Negator gives anti-vehicle 4+.")
+                        weapon_keywords.push("ANTI-VEHICLE 4")
+                    }
+                    for (let kw of ["AUSPEX ARRAY", "OMNISPEX"]) if (source_abilities.includes(kw)) {
+                        log(`${kw} grants IGNORES COVER to ranged weapons.`)
+                        weapon_keywords.push("IGNORES COVER")
+                    }
+                }
+                if (inches < 18 && source_abilities.includes("GLOVODAN PSYBER-EAGLE")) {
                     log("Glovodan Psyber-eagle ignoring cover < 18\"")
                     weapon_keywords.push("IGNORES COVER")
-                } else if (source_abilities.includes("PURGE AND CLEANSE")) {
+                }
+                if (source_abilities.includes("PURGE AND CLEANSE")) {
                     log("PURGE AND CLEANSE ignoring cover")
                     weapon_keywords.push("IGNORES COVER")
                 }
@@ -1368,7 +1517,7 @@ Keywords: Battleline Endless Multitude Faction: Tyranids Great Devourer Infantry
                     log(`${weapon} out of range. ${R} <= ${inches}`)
                     continue
                 }
-                if (target_keywords.includes("LONE OPERATIVE") && inches > 12) {
+                if (target_rules.includes("LONE OPERATIVE") && inches > 12) {
                     log(`Lone operative hidden.`)
                     continue
                 }
@@ -1848,9 +1997,15 @@ Melee
                     if (mo) {
                         ability = mo[1]
                         val = parseInt(mo[2])
-                        let inv_mo = /^This model has a (\d)\+ invulnerable save.$/.exec(mo[2].trim())
-                        if (inv_mo) val = parseInt(inv_mo[1])
-                        if (val) ability += ' ' + val
+                        let inv_mo = /^Invulnerable Save \((\d)\+\)$/.exec(ability.trim())
+                        if (inv_mo) {
+                            val = parseInt(inv_mo[1])
+                            ability = `Invulnerable Save ${val}`
+                        } else {
+                            inv_mo = /^This model has a (\d)\+ invulnerable save.$/.exec(mo[2].trim())
+                            if (inv_mo) val = parseInt(inv_mo[1])
+                            if (val) ability += ' ' + val
+                        }
                         //log(`Line '''${line}''' has ${mode}: '''${ability}'''`)
                         squad[mode.toLowerCase()].push(ability)
                     }
